# Sudoku

./: .gitignore  CMakeLists.txt  README.md
resources/: languages.json
src/: Geolocation.cpp  Geolocation.hpp  LabelStorage.cpp  LabelStorage.hpp  languages.qml  main.cpp  main.qml  mainMenu.qml
src/game/: Sudoku.cpp  Sudoku.hpp  SudokuGrid.cpp  SudokuGrid.hpp  SudokuGridStyle.cpp  SudokuGridStyle.hpp  SudokuSolver.cpp  SudokuSolver.hpp  difficultyChoice.qml  game.qml
src/records/: RecordStorage.cpp  RecordStorage.hpp  constants.hpp  records.json  records.qml
